--- a/Passenger_Counter_App/index.html
+++ b/Passenger_Counter_App/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>People entered:</h1>
-    <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="counter()">Increment</button>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="counter-container">
+      <h1>People entered:</h1>
+      <h2 id="count-el">0</h2>
+      <button id="increment-btn" onclick="counter()">Increment</button>
       <!-- 2. Create a SAVE button.
-        Set the id to "save-btn" and call the save() function when it's clicked -->
-        <button id="save-btn" onclick="save()">Save Count</button>
+            Set the id to "save-btn" and call the save() function when it's clicked -->
+      <button id="save-btn" onclick="save()">Save Count</button>
+      <p id="save-el">Previous:</p>
+    </div>
+
     <script src="script.js" defer></script>
-    <script src="Practice_Environment/practice.js" defer></script>
-</body>
-</html> 
+  </body>
+</html>
