Implemented core game logic using JavaScript. Added event listeners to update scores based on button clicks. Included functionality to highlight the leading team. Basic score tracking and display implemented.

--- a/scrimba_Solo_Projects/index.html
+++ b/scrimba_Solo_Projects/index.html
@@ -10,16 +10,27 @@
   <body>
     <div class="container">
       <div>
-        <h3>HOME</h3>
+        <h3 id="home">HOME</h3>
         <div class="score-container">
           <p id="home-score">0</p>
         </div>
+        <div class="button-container">
+          <button id="home-score1">+1</button
+          ><button id="home-score2">+2</button
+          ><button id="home-score3">+3</button>
+        </div>
       </div>
       <div>
-        <h3>GUEST</h3>
+        <h3 id="guest">GUEST</h3>
         <div class="score-container">
           <p id="guest-score">0</p>
         </div>
+        <div class="button-container">
+          <button id="guest-score1">+1</button
+          ><button id="guest-score2">+2</button
+          ><button id="guest-score3">+3</button>
+      </div>
+     
       </div>
     </div>
     <script src="script.js"></script>
