--- a/scrimba_Solo_Projects/index.html
+++ b/scrimba_Solo_Projects/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="clock-container">
+        <p id="game-clock">12:00</p>
+      </div>
       <div>
+       
         <h3 id="home">HOME</h3>
         <div class="score-container">
           <p id="home-score">0</p>
@@ -29,8 +33,7 @@
           <button id="guest-score1">+1</button
           ><button id="guest-score2">+2</button
           ><button id="guest-score3">+3</button>
-      </div>
-     
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
